# TaskFlow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: desktop-release.yml
deploy/: Caddyfile  deploy.sh  sync-desktop.sh  taskflow.service
docs/: anionex-taste.md  design-system-preview.html  design-system.md  总结文档.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: agent.ts  ai.ts  auth.ts  checkin.ts  client.ts  recycle.ts  tasks.ts  templates.ts  user.ts
frontend/src/components/agent/: Markdown.tsx  PendingActionCard.tsx  ToolTrace.tsx
frontend/src/components/ai/: AiDraftCard.tsx  SmartInput.tsx
frontend/src/lib/: categories.ts  isTauri.ts  useIsMobile.ts  utils.ts
frontend/src/pages/: AppPage.tsx  DownloadPage.tsx  LandingPage.tsx  LoginPage.tsx  PrivacyPage.tsx  RegisterPage.tsx
frontend/src/store/: index.ts
frontend/src/styles/: app.css  tokens.css
migrations/: 0001_init.sql  0002_llm_settings.sql
promo/: CREDITS.md
promo/project/: fetch-fonts.mjs  index.html  meta.json  package.json
src/: agent.rs  ai.rs  auth.rs  checkin.rs  config.rs  data.rs  lib.rs  main.rs  models.rs  recycle.rs  response.rs  scheduler.rs  server.rs  state.rs  tasks.rs  templates.rs  user.rs  util.rs
static/: app.js  index.html  style.css
tests/: integration_tests.rs
(+23 files in other folders)
