[package]
name = "taskflow-desktop"
version = "2.0.1"
description = "TaskFlow 智能化 GTD 桌面端"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
